Added new endpoint

--- a/lab08/lab08/appsettings.json
+++ b/lab08/lab08/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost\\SQLEXPRESS;Database=apbd_lab08;Integrated Security=True;TrustServerCertificate=True;"
+  }
 }
